# audio-stream-server

./: .gitignore  LICENCE  README  doc-basc.txt  doc-bass.txt
bass-genom3/: bass.gen  bassStruct.idl
bass-genom3/codels/: AudioCapture.c  AudioCapture.h  Makefile.am  Ports.c  Ports.h  Sockets.c  Sockets.h  bass_capture_codels.c  bass_codels.c  bass_socket_codels.c
capture/: capture.gen  captureStruct.idl  captureinterface.gen  cleanup.sh
capture/codels/: AudioCapture.c  AudioCapture.h  Makefile.am  Ports.c  Ports.h  capture_codels.c  capture_retrieve_data_codels.c  capture_socket_codels.c
dedicatedSocket/: conversionBinaryMex.c  conversionBinaryMex.mexw64  dedicatedSocketOpen.m  dedicatedSocketRead.m  test.m  testbench.m
dedicatedSocket-MATLAB/: conversionBinaryMex.mexmaci64
